Hack to solve the ion-slides width issue on ios

--- a/src/app/pages/noidentity/noidentity.scss
+++ b/src/app/pages/noidentity/noidentity.scss
@@ -1,3 +1,7 @@
+.hidden {
+    display:none
+}
+
 .root-container {
     background: url('../../../assets/images/Welcome_Screen_BG.svg') no-repeat center top / cover;
 }
